ADD Borders match selected colours

--- a/config.html
+++ b/config.html
@@ -113,7 +113,7 @@
                         </div>
                     </div>
                     <div id="customize" class="menuTab mb-6">
-                        <button id="bodyAccordion" class="accordion w-full py-4 border-b-4 border-green-700 text-left outline-none">Body</button>
+                        <button id="bodyAccordion" class="accordion w-full py-4 border-b-4 border-green-700 text-left outline-none text-gray-600">Body</button>
                         <div class="panel">
                             <div class="px-4 py-4 flex items-center">
                                 <button data-name="red" onclick="changeColour('red','body')" class="bg-red-700 w-8 h-8 mr-4 body-button rounded-full relative"></button>
@@ -121,7 +121,7 @@
                                 <button data-name="green" onclick="changeColour('green','body')" class="bg-green-700 w-8 h-8 mr-4 body-button rounded-full relative selected"></button>
                             </div>
                         </div>
-                        <button id="armAccordion" class="accordion w-full py-4 border-b-4 border-blue-700 text-left outline-none">Arms</button>
+                        <button id="armAccordion" class="accordion w-full py-4 border-b-4 border-blue-700 text-left outline-none text-gray-600">Arms</button>
                         <div class="panel">
                             <div class="px-4 py-4 flex items-center">
                                 <button data-name="red" onclick="changeColour('red','arm')" class="bg-red-700 w-8 h-8 mr-4 arm-button rounded-full relative"></button>
@@ -129,7 +129,7 @@
                                 <button data-name="green" onclick="changeColour('green','arm')" class="bg-green-700 w-8 h-8 mr-4 arm-button rounded-full relative"></button>
                             </div>
                         </div>
-                        <button id="collarAccordion" class="accordion w-full py-4 border-b-4 border-red-600 text-left outline-none">Collar</button>
+                        <button id="collarAccordion" class="accordion w-full py-4 border-b-4 border-red-600 text-left outline-none text-gray-600">Collar</button>
                         <div class="panel">
                             <div class="px-4 py-4 flex items-center">
                                 <button data-name="red" onclick="changeColour('red','collar')" class="bg-red-700 w-8 h-8 mr-4 collar-button rounded-full relative selected"></button>
@@ -137,7 +137,7 @@
                                 <button data-name="green" onclick="changeColour('green','collar')" class="bg-green-700 w-8 h-8 mr-4 collar-button rounded-full relative"></button>
                             </div>
                         </div>
-                        <button id="hemAccordion" class="accordion w-full py-4 border-b-4 border-red-700 text-left outline-none">Hem</button>
+                        <button id="hemAccordion" class="accordion w-full py-4 border-b-4 border-red-700 text-left outline-none text-gray-600">Hem</button>
                         <div class="panel">
                             <div class="px-4 py-4 flex items-center">
                                 <button data-name="red" onclick="changeColour('red','hem')" class="bg-red-700 w-8 h-8 mr-4 hem-button rounded-full relative selected relative"></button>
