--- a/home.html
+++ b/home.html
@@ -21,9 +21,9 @@
                         <img src="img/almaborealis-logo.png" class="h-10" alt="Almaborealis logo">
                     </a>
                     <nav class="hidden md:ml-auto md:block lg:flex flex-wrap items-center text-base justify-c">
-                        <a class="mr-6 hover:text-gray-900 font-medium text-red-700 cursor-pointer hidden md:block">About</a>
-                        <a class="mr-6 hover:text-gray-900 font-medium text-red-700 cursor-pointer hidden md:block">Shop</a>
-                        <a class="mr-12 hover:text-gray-900 font-medium text-red-700 cursor-pointer hidden md:block">Contact</a>
+                        <a href="about.html" class="mr-6 hover:text-gray-900 font-medium text-red-700 cursor-pointer hidden md:block">About</a>
+                        <a href="config.html" class="mr-6 hover:text-gray-900 font-medium text-red-700 cursor-pointer hidden md:block">Shop</a>
+                        <a href="contact.html" class="mr-12 hover:text-gray-900 font-medium text-red-700 cursor-pointer hidden md:block">Contact</a>
                     </nav>
                     <a href="config.html" class="lg:inline-flex items-center bg-red-700 text-white border-0 py-1 px-3 focus:outline-none hover:bg-red-600 rounded text-base mt-4 md:mt-0 hidden">Shop Convertibles
                           <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
