ADD Cursor to links

--- a/home.html
+++ b/home.html
@@ -273,7 +273,7 @@
                   </div>
                 </div>
               </div>
-              <img class="lg:w-3/5 md:w-1/2 object-cover object-center rounded-lg md:mt-0 mt-12" src="img/steps-carousel-image.jpg" alt="step">
+              <img class="w-full lg:w-3/5 md:w-1/2 object-cover object-center rounded-lg md:mt-0 mt-12" src="img/steps-carousel-image.jpg" alt="step">
             </div>
           </div>
         </section>
