--- a/contact.html
+++ b/contact.html
@@ -52,11 +52,11 @@
                 <p class="leading-relaxed mb-5 text-gray-600">Fill in your email and drop us a message and we'll get back to you as soon as we can!</p>
                 <div class="relative mb-4">
                 <label for="email" class="leading-7 text-sm text-gray-600">Email</label>
-                <input type="email" id="email" name="email" class="w-full bg-white rounded border border-gray-300 focus:border-red-500 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
+                <input type="email" id="email" name="email" placeholder="Your email..." class="w-full bg-white rounded border border-gray-300 focus:border-red-500 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
                 </div>
                 <div class="relative mb-4">
                 <label for="message" class="leading-7 text-sm text-gray-600">Message</label>
-                <textarea id="message" name="message" class="w-full bg-white rounded border border-gray-300 focus:border-red-500 h-32 text-base outline-none text-gray-700 py-1 px-3 resize-none leading-6 transition-colors duration-200 ease-in-out"></textarea>
+                <textarea id="message" name="message" placeholder="Your message..." class="w-full bg-white rounded border border-gray-300 focus:border-red-500 h-32 text-base outline-none text-gray-700 py-1 px-3 resize-none leading-6 transition-colors duration-200 ease-in-out"></textarea>
                 </div>
                 <button class="text-white bg-red-700 border-0 py-2 px-6 focus:outline-none hover:bg-red-600 rounded text-lg">Email...</button>
                 <p class="text-xs text-gray-500 mt-3">Copyright Almaborealis® 2020
@@ -88,11 +88,7 @@
                           <h2 class="text-gray-900 text-lg title-font font-medium mb-3">Give us a call</h2>
                           <p class="leading-relaxed text-base">Need help? Give us a</p>
                           <p class="leading-relaxed text-base"> call during any week-day 8am to 5pm</p>
-                          <a class="mt-3 text-red-500 inline-flex items-center">123-456-7890
-                            <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
-                                
-                            </svg>
-                          </a>
+                          <a href="tel:1234567890" class="mt-3 text-red-500 inline-flex items-center cursor-pointer">123-456-7890</a>
                       </div>
                     </div>
                     <div class="p-4 w-full md:w-1/3 md:mb-0 mb-6 flex flex-col text-center items-center" data-aos="fade-up" data-aos-delay="300">
@@ -105,11 +101,7 @@
                           <h2 class="text-gray-900 text-lg title-font font-medium mb-3">Send an email</h2>
                           <p class="leading-relaxed text-base">Drop us a line, we'd love to</p>
                           <p class="leading-relaxed text-base">hear from you...</p>
-                          <a class="mt-3 text-red-500 inline-flex items-center">Example@gmail.com
-                            <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
-                                
-                            </svg>
-                          </a>
+                          <a href="mailto:someone@example.com" class="mt-3 text-red-500 inline-flex items-center cursor-pointer">Example@gmail.com</a>
                       </div>
                     </div>
                     <div class="p-4 w-full md:w-1/3 md:mb-0 mb-6 flex flex-col text-center items-center" data-aos="fade-up" data-aos-delay="600">
@@ -123,10 +115,7 @@
                           <h2 class="text-gray-900 text-lg title-font font-medium mb-3">Visit our store</h2>
                           <p class="leading-relaxed text-base">Pop in by, we'll get the</p>
                           <p class="leading-relaxed text-base">kettel on...</p>
-                          <a class="mt-3 text-red-500 inline-flex items-center">Garthdee House, Garthdee Rd, Aberdeen AB10 7AQ  
-                              <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">   
-                              </svg>
-                          </a>
+                          <a class="mt-3 text-red-500 inline-flex items-center">Garthdee House, Garthdee Rd,<br>Aberdeen AB10 7AQ</a>
                       </div>
                     </div>
                 </div>
