--- a/home.html
+++ b/home.html
@@ -81,7 +81,7 @@
         <div class="container mx-auto flex-col md:flex-row flex justify-center pb-24">
           <div class="mr-0 mb-8 md:mr-8 relative" data-aos="fade-right"
           data-aos-duration="1500">
-            <img class="m-0 w-full" src="img/grid-1.jpg" alt="A group of children wearing Convertibles garments">
+            <img loading="lazy" class="m-0 w-full" src="img/grid-1.jpg" alt="A group of children wearing Convertibles garments">
             <div class="bg-white absolute cover-card">
               <div class="max-w-md p-4 mx-auto text-center md:text-left">
                 <h2 class="text-xl text-red-700 font-bold">Old Meets New</h2>
@@ -98,7 +98,7 @@
           <div>
             <div class="mb-8" data-aos="fade-left"
             data-aos-duration="1500">
-              <img class="mb-4 w-full" src="img/grid-2.jpg" alt="A child assembling a Convertibles kit">
+              <img loading="lazy" class="mb-4 w-full" src="img/grid-2.jpg" alt="A child assembling a Convertibles kit">
               <div class="md:ml-0 max-w-md text-center md:text-left mx-auto">
                 <h2 class="text-xl text-red-700 font-bold">Build Children's Abilities</h2>
                 <p class="text-gray-700">Help develop a child’s dexterity and creativity in a fun and interactive way.</p>
@@ -106,7 +106,7 @@
             </div>
             <div class="mb-8" data-aos="fade-left"
             data-aos-duration="1500">
-              <img class="mb-4 w-full" src="img/grid-3.jpg" alt="A Convertibles Join the Jumper kit laid out in its components">
+              <img loading="lazy" class="mb-4 w-full" src="img/grid-3.jpg" alt="A Convertibles Join the Jumper kit laid out in its components">
               <div class="md:ml-0 max-w-md text-center md:text-left mx-auto">
                 <h2 class="text-xl text-red-700 font-bold">Sustainable Materials</h2>
                 <p class="text-gray-700">Every convertibles kit is made with 100% biodegradable scottish lambswool.</p>
@@ -142,7 +142,7 @@
                 <div class="lg:w-1/3 sm:w-1/2 p-4" data-aos="fade-right"
                 data-aos-duration="1500">
                   <div class="flex relative mb-4 sm:mb-0">
-                    <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center object-scale-down" src="img/image-gallery1.jpg">
+                    <img loading="lazy" alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center object-scale-down" src="img/image-gallery1.jpg">
                     <div class="px-8 py-10 relative z-10 w-full border-4 border-red-400 bg-white opacity-0 hover:opacity-100 hover-card">
                       <h2 class="tracking-widest text-sm title-font font-bold text-red-700 mb-1">The Start</h2>
                       <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Starting Small</h1>
@@ -158,7 +158,7 @@
                 <div class="lg:w-1/3 sm:w-1/2 p-4" data-aos="fade-up"
                 data-aos-duration="1500" data-aos-delay="300">
                   <div class="flex relative mb-4 sm:mb-0">
-                    <img alt="gallery" class="absolute inset-0 w-full h-full object-fit object-center object-scale-down" src="img/image-gallery3.jpg">
+                    <img loading="lazy" alt="gallery" class="absolute inset-0 w-full h-full object-fit object-center object-scale-down" src="img/image-gallery3.jpg">
                     <div class="px-8 py-10 relative z-10 w-full border-4 border-red-400 bg-white opacity-0 hover:opacity-100 hover-card">
                       <h2 class="tracking-widest text-sm title-font font-bold text-red-700 mb-1">Growth Spurt</h2>
                       <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Grown Up</h1>
@@ -174,7 +174,7 @@
                 <div class="lg:w-1/3 sm:w-1/2 p-4" data-aos="fade-left"
                 data-aos-duration="1500" data-aos-delay="600">
                   <div class="flex relative mb-4 sm:mb-0">
-                    <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center object-scale-down" src="img/image-gallery2.jpg">
+                    <img loading="lazy" alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center object-scale-down" src="img/image-gallery2.jpg">
                     <div class="px-8 py-10 relative z-10 w-full border-4 border-red-400 bg-white opacity-0 hover:opacity-100 hover-card">
                       <h2 class="tracking-widest text-sm title-font font-bold text-red-700 mb-1">Customizations</h2>
                       <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Maybe Add a Skirt?</h1>
@@ -273,7 +273,7 @@
                   </div>
                 </div>
               </div>
-              <img class="w-full lg:w-3/5 md:w-1/2 object-cover object-center rounded-lg md:mt-0 mt-12" src="img/steps-carousel-image.jpg" alt="step">
+              <img loading="lazy" class="w-full lg:w-3/5 md:w-1/2 object-cover object-center rounded-lg md:mt-0 mt-12" src="img/steps-carousel-image.jpg" alt="step">
             </div>
           </div>
         </section>
@@ -285,7 +285,7 @@
           <section class="text-gray-700 body-font">
             <div class="container px-4 pb-24 mx-auto flex flex-wrap">
               <div class="lg:w-1/2 w-full mb-10 lg:mb-0 rounded-lg overflow-hidden">
-                <img alt="feature" class="object-cover object-center h-full w-full" src="img/section-callum-img1.jpg">
+                <img loading="lazy" alt="feature" class="object-cover object-center h-full w-full" src="img/section-callum-img1.jpg">
               </div>
               <div class="flex flex-col flex-wrap lg:py-6 -mb-10 lg:w-1/2 lg:pl-12 lg:text-left text-center">
                 <div class="flex flex-col mb-10 lg:items-start items-center">
@@ -346,7 +346,7 @@
                 
               </div>
               <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6">
-                <img class="object-cover object-center" alt="hero" src="img/section-callum-img2.jpg">
+                <img loading="lazy" class="object-cover object-center" alt="hero" src="img/section-callum-img2.jpg">
               </div>
             </div>
           </section>
@@ -465,7 +465,7 @@
         <footer class="bg-red-500">
           <div class="container px-4 py-8 mx-auto flex items-center sm:flex-row flex-col">
             <a class="font-medium items-center md:justify-start justify-center">
-              <img class="h-8" src="img/almaborealis-logo-white.png" alt="Almaborealis logo">
+              <img loading="lazy" class="h-8" src="img/almaborealis-logo-white.png" alt="Almaborealis logo">
             </a>
             <p class="text-sm text-white sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-white sm:py-2 sm:mt-0 mt-4">© 2020 Almaborealis —
               <a href="https://twitter.com/knyttneve" class="text-white ml-1" rel="noopener noreferrer" target="_blank">@almaborealis</a>
