ADD mobile navigation to all pages

--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
                     <a href="home.html" class="flex title-font font-medium items-center text-gray-900 mb-0 cursor-pointer">
                         <img src="img/almaborealis-logo.png" class="h-10" alt="Almaborealis logo">
                     </a>
-                    <nav class="hidden md:ml-auto md:block lg:flex flex-wrap items-center text-base justify-c">
+                    <nav class="hidden md:ml-auto md:block lg:flex flex-wrap items-center text-base">
                         <a href="about.html" class="mr-6 hover:text-gray-900 font-medium text-red-700 cursor-pointer hidden md:block">About</a>
                         <a href="config.html" class="mr-6 hover:text-gray-900 font-medium text-red-700 cursor-pointer hidden md:block">Shop</a>
                         <a href="contact.html" class="mr-12 hover:text-gray-900 font-medium text-red-700 cursor-pointer hidden md:block">Contact</a>
@@ -30,7 +30,7 @@
                               <path d="M5 12h14M12 5l7 7-7 7"></path>
                           </svg>
                     </a>
-                <button class="lg:hidden burger cursor-pointer" onclick="menuToggle()">
+                <button id="burgerMenu" class="lg:hidden burger cursor-pointer" onclick="menuToggle()">
                     <svg stroke="currentColour" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M22 18.005C22 18.555 21.554 19 21.005 19H12.995C12.7311 19 12.478 18.8952 12.2914 18.7086C12.1048 18.522 12 18.2689 12 18.005C12 17.7411 12.1048 17.488 12.2914 17.3014C12.478 17.1148 12.7311 17.01 12.995 17.01H21.005C21.555 17.01 22 17.455 22 18.005V18.005Z" fill="black"/>
                         <path d="M22 11.9999C22 12.5499 21.554 12.9949 21.005 12.9949H2.995C2.73111 12.9949 2.47803 12.8901 2.29143 12.7035C2.10483 12.5169 2 12.2638 2 11.9999C2 11.736 2.10483 11.4829 2.29143 11.2963C2.47803 11.1097 2.73111 11.0049 2.995 11.0049H21.005C21.555 11.0049 22 11.4509 22 11.9999V11.9999Z" fill="black"/>
@@ -38,6 +38,11 @@
                     </svg>
                 </button>              
             </div>
+            <nav id="mobileNav" class="hidden text-xl px-6 py-4 md:ml-auto md:block lg:flex flex-wrap items-center text-right border-t-2 border-gray-200">
+              <a href="about.html" class="block py-2 hover:text-gray-900 font-medium text-red-700 cursor-pointer border-b border-t border-gray-200">About</a>
+              <a href="config.html" class="block py-2 hover:text-gray-900 font-medium text-red-700 cursor-pointer border-b border-gray-200">Shop</a>
+              <a href="contact.html" class="block py-2 hover:text-gray-900 font-medium text-red-700 cursor-pointer border-b border-gray-200">Contact</a>
+          </nav>
           </header>
           <div class="spacer"></div>
           <div class="flex items-end md:items-center w-full bg-hero-img bg-cover hero-height bg-left-top">
