--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
                     <a href="home.html" class="flex title-font font-medium items-center text-gray-900 mb-0 cursor-pointer">
                         <img src="img/almaborealis-logo.png" class="h-10" alt="Almaborealis logo">
                     </a>
-                    <nav class="hidden md:ml-auto md:block lg:flex flex-wrap items-center text-base">
+                    <nav class="hidden md:ml-auto lg:flex flex-wrap items-center text-base">
                         <a href="about.html" class="mr-6 hover:text-gray-900 font-medium text-red-700 cursor-pointer hidden md:block">About</a>
                         <a href="config.html" class="mr-6 hover:text-gray-900 font-medium text-red-700 cursor-pointer hidden md:block">Shop</a>
                         <a href="contact.html" class="mr-12 hover:text-gray-900 font-medium text-red-700 cursor-pointer hidden md:block">Contact</a>
@@ -33,11 +33,13 @@
                     </svg>
                 </button>              
             </div>
-            <nav id="mobileNav" class="hidden text-xl px-6 py-4 md:ml-auto md:block lg:flex flex-wrap items-center text-right border-t-2 border-gray-200">
-              <a href="about.html" class="block py-2 hover:text-gray-900 font-medium text-red-700 cursor-pointer border-b border-t border-gray-200">About</a>
-              <a href="config.html" class="block py-2 hover:text-gray-900 font-medium text-red-700 cursor-pointer border-b border-gray-200">Shop</a>
-              <a href="contact.html" class="block py-2 hover:text-gray-900 font-medium text-red-700 cursor-pointer border-b border-gray-200">Contact</a>
-            </nav>
+            <div class="bg-white">
+                <nav id="mobileNav" class="container mx-auto hidden lg:hidden text-xl px-6 py-4 text-right border-t-2 border-gray-200">
+                    <a href="about.html" class="block py-2 hover:text-gray-900 font-medium text-red-700 cursor-pointer border-b border-t border-gray-200">About</a>
+                    <a href="config.html" class="block py-2 hover:text-gray-900 font-medium text-red-700 cursor-pointer border-b border-gray-200">Shop</a>
+                    <a href="contact.html" class="block py-2 hover:text-gray-900 font-medium text-red-700 cursor-pointer border-b border-gray-200">Contact</a>
+                </nav>
+            </div>
           </header>
           <div class="spacer"></div>
     </section>
