--- a/home.html
+++ b/home.html
@@ -54,7 +54,7 @@
                 <h1 class="text-2xl md:text-4xl mb-6 font-thin uppercase">Clothes that <span class="text-red-700 highlight">kids</span> can make</h1>
                 <p class="mb-8">Almaborealis is a knitwear design lab in Edinburgh, Scotland. We create clothing concepts that share traditional craft skills and embrace circular economy design principals, to make products that take in consideration the environment of future generations.</p>
                 <div>
-                    <a class="text-lg md:text-2xl md:px-4 md:py-2 mr-6 border-solid md:border md:border-gray-800">About Us <span class="ml-2 md:ml-4">
+                    <a href="about.html" class="text-lg md:text-2xl md:px-4 md:py-2 mr-6 border-solid md:border md:border-gray-800">About Us <span class="ml-2 md:ml-4">
                       <svg class="inline" width="8" height="12" viewBox="0 0 8 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M0.292969 1.61767L4.58597 5.99075L0.292969 10.3638L1.70697 11.8042L7.41397 5.99075L1.70697 0.177296L0.292969 1.61767Z" fill="#414141"/>
                       </svg>
@@ -93,7 +93,7 @@
               <div class="max-w-md p-4 mx-auto text-center md:text-left">
                 <h2 class="text-xl text-red-700 font-bold">Old Meets New</h2>
                 <p class="text-gray-700 mb-4">Learn more about what makes Convertibles so unique. And why parents and the planet love them.</p>
-                <button class="text-lg px-4 py-2 md:mr-6 border-solid border border-gray-800">About Us <span class="ml-4">
+                <button class="text-lg px-4 py-2 md:mr-6 border-solid border border-gray-800"> <a href="about.html">About Us</a><span class="ml-4">
                   <svg class="inline" width="8" height="12" viewBox="0 0 8 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M0.292969 1.61767L4.58597 5.99075L0.292969 10.3638L1.70697 11.8042L7.41397 5.99075L1.70697 0.177296L0.292969 1.61767Z" fill="#414141"/>
                   </svg>
