--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,7 @@
                 </div>
                 <div class="flex flex-wrap sm:-m-4 -mx-4 -mb-10 -mt-4">
                     <div class=" p-4 w-full md:w-1/3 md:mb-0 mb-6 flex flex-col text-center items-center" data-aos="fade-up">
-                      <div class="w-20 h-20 inline-flex items-center justify-center rounded-full bg-red-100 text-red-500 mb-5 flex-shrink-0">
+                        <div class="w-20 h-20 inline-flex items-center justify-center rounded-full bg-red-600 text-white mb-5 flex-shrink-0">
                         <svg width="48" height="48" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
                           <path d="M27.4094 7.45937L24.0812 4.13438C23.675 3.72813 23.1312 3.5 22.5562 3.5C21.9812 3.5 21.4375 3.725 21.0312 4.13438L17.4469 7.7125C17.0406 8.11875 16.8125 8.66563 16.8125 9.24063C16.8125 9.81875 17.0375 10.3594 17.4469 10.7688L20.2469 13.5719C19.609 15.0581 18.6925 16.4084 17.5469 17.55C16.4 18.7031 15.0594 19.6125 13.5719 20.2563L10.7719 17.4531C10.3656 17.0469 9.82187 16.8188 9.24687 16.8188C8.96326 16.8177 8.68229 16.8733 8.42042 16.9822C8.15856 17.0911 7.92107 17.2512 7.72188 17.4531L4.13438 21.0312C3.72813 21.4375 3.5 21.9844 3.5 22.5594C3.5 23.1375 3.725 23.6781 4.13438 24.0875L7.45937 27.4125C8.15312 28.1063 9.10937 28.5031 10.0906 28.5031C10.2937 28.5031 10.4906 28.4875 10.6906 28.4531C14.8281 27.7719 18.9344 25.5688 22.25 22.2563C25.5625 18.9375 27.7625 14.8313 28.45 10.6906C28.6469 9.51563 28.2531 8.30625 27.4094 7.45937V7.45937ZM26.2344 10.3188C25.625 14.0031 23.6437 17.6781 20.6594 20.6625C17.675 23.6469 14.0031 25.6281 10.3188 26.2375C9.85625 26.3156 9.38125 26.1594 9.04375 25.825L5.77812 22.5594L9.24063 19.0938L12.9844 22.8438L13.0125 22.8719L13.6875 22.6219C15.7341 21.8694 17.5927 20.6809 19.1343 19.1387C20.676 17.5965 21.8639 15.7375 22.6156 13.6906L22.8656 13.0156L19.0906 9.24375L22.5531 5.77812L25.8188 9.04375C26.1563 9.38125 26.3125 9.85625 26.2344 10.3188Z" fill="#F56565"/>
                         </svg>                          
@@ -92,7 +92,7 @@
                       </div>
                     </div>
                     <div class="p-4 w-full md:w-1/3 md:mb-0 mb-6 flex flex-col text-center items-center" data-aos="fade-up" data-aos-delay="300">
-                      <div class="w-20 h-20 inline-flex items-center justify-center rounded-full bg-red-600 text-red-500 mb-5 flex-shrink-0">
+                        <div class="w-20 h-20 inline-flex items-center justify-center rounded-full bg-red-600 text-white mb-5 flex-shrink-0">
                         <svg width="48" height="48" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
                           <path d="M28 6H4C3.46957 6 2.96086 6.21071 2.58579 6.58579C2.21071 6.96086 2 7.46957 2 8V24C2 24.5304 2.21071 25.0391 2.58579 25.4142C2.96086 25.7893 3.46957 26 4 26H28C28.5304 26 29.0391 25.7893 29.4142 25.4142C29.7893 25.0391 30 24.5304 30 24V8C30 7.46957 29.7893 6.96086 29.4142 6.58579C29.0391 6.21071 28.5304 6 28 6V6ZM25.8 8L16 14.78L6.2 8H25.8ZM4 24V8.91L15.43 16.82C15.5974 16.9361 15.7963 16.9984 16 16.9984C16.2037 16.9984 16.4026 16.9361 16.57 16.82L28 8.91V24H4Z" fill="#F56565"/>
                         </svg> 
@@ -105,7 +105,7 @@
                       </div>
                     </div>
                     <div class="p-4 w-full md:w-1/3 md:mb-0 mb-6 flex flex-col text-center items-center" data-aos="fade-up" data-aos-delay="600">
-                      <div class="w-20 h-20 inline-flex items-center justify-center rounded-full bg-red-600 text-red-500 mb-5 flex-shrink-0">
+                      <div class="w-20 h-20 inline-flex items-center justify-center rounded-full bg-red-600 text-white mb-5 flex-shrink-0">
                           <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10" viewBox="0 0 24 24">
                           <path d="M20 21v-2a4 4 0 00-4-4H8a4 4 0 00-4 4v2"></path>
                           <circle cx="12" cy="7" r="4"></circle>
