ADD refactored scripts for appropriate pages

--- a/config.html
+++ b/config.html
@@ -264,6 +264,7 @@
         </div>
     </footer>
 
-    <script src="scripts/script.js"></script>
+    <script src="scripts/mobileNav.js"></script>
+    <script src="scripts/configurator.js"></script>
 </body>
 </html>
