--- a/home.html
+++ b/home.html
@@ -515,6 +515,7 @@
   <script>
     AOS.init();
   </script>
-  <script src="scripts/script.js"></script>
+  <script src="scripts/mobileNav.js"></script>
+  <script src="scripts/modal.js"></script>
 </body>
 </html>
