--- a/contact.html
+++ b/contact.html
@@ -68,7 +68,7 @@
                     <label for="message" class="leading-7 text-sm text-gray-600">Message</label>
                     <textarea id="message" name="message" placeholder="Your message..." class="w-full bg-white rounded border border-gray-300 focus:border-red-500 h-32 text-base outline-none text-gray-700 py-1 px-3 resize-none leading-6 transition-colors duration-200 ease-in-out"></textarea>
                     </div>
-                    <div data-netlify-recaptcha="true"></div>
+                    <div data-netlify-recaptcha="true" class="py-2"></div>
                     <button type="submit" class="text-white bg-red-700 border-0 py-2 px-6 focus:outline-none hover:bg-red-600 rounded text-lg">Email...</button>
                     <p class="text-xs text-gray-500 mt-3">Copyright Almaborealis® 2020
                     </p>
